# Dissertation

1. Basic_Dissertation_structure_2022_6_30/: FileOperator.cpp  Macro.hpp  Problem.cpp  main.cpp
1. New_Dissertation_2022_6_30/: CMakeLists.txt  FileOperator.hpp  Problem.hpp
2. SA_and_function_from_vns_2022_7_1/: ACO.cpp  Algorithm.hpp  CMakeLists.txt  DBCA.cpp  FileOperator.cpp  FileOperator.hpp  Operators.cpp  Operators.hpp  Problem.cpp  Problem.hpp  SA.cpp  main.cpp  results.E-n23-k3.evrp.txt
2022.7.25_22_42_Basic_Structure_and_VNS/: Algorithm.hpp  CMakeLists.txt  FileOperator.cpp  FileOperator.hpp  Operators.hpp  Problem.cpp  Problem.hpp  VNS.cpp  main.cpp
3. The FinalSA and VNS with vector/: Algorithm.hpp  CMakeLists.txt  DBCA.cpp  FileOperator.cpp  Operators.cpp  Problem.cpp  Problem.hpp  SA.cpp  VNS.cpp  main.cpp
4. 2022.7.15 读取格式修正/: ACO.cpp  ACO.hpp  CMakeLists.txt  LocalSearch.cpp  Macro.hpp  (+7 more)
ACO_2022_6_28_HAVE MISTAKES/: ACO.cpp  CMakeLists.txt  GA.cpp  Macro.hpp  Methods.hpp  Problem.cpp  Solution.hpp  Solver.cpp  Solver.hpp
ACO_2022_6_28_HAVE MISTAKES/Parameter/: ACO.txt
ACO_2022_6_28_HAVE MISTAKES/Result/: E-n22-k4.evrp.Result.txt
VNS_test_with_problem/: Algorithm.hpp  CMakeLists.txt  DBCA.cpp  Macro.hpp  Operators.cpp  Operators.hpp  Permutation.cpp  Permutation.hpp  Problem.cpp  Problem.hpp  floydWarshall.cpp  floydWarshall.hpp  main.cpp  main2.hpp
aco/: CMakeLists.txt  Problem.cpp  Problem.hpp  main.cpp
aco/Model/: ACO.cpp  ACO.hpp  Solution.cpp
aco/Result/: E-n101-k8.evrp.Result.txt  E-n22-k4.evrp.Result.txt  E-n23-k3.evrp.Result.txt  E-n30-k3.evrp.Result.txt  E-n51-k5.evrp.Result.txt
(+73 files in other folders)
